# redscript

.github/workflows/: ci.yml  default.yml
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: parser.rs  scope.rs
core/: Cargo.toml
core/src/: ast.rs
