[package]
name = "redscript-cli"
version = "0.1.0"
authors = ["jac3km4 <jac3km4@pm.me>"]
edition = "2018"

[dependencies]
redscript = { path = "../core" }
redscript-decompiler = { path = "../decompiler" }
redscript-compiler = { path = "../compiler" }
gumdrop = "0.8"
walkdir = "2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
